--- a/FiveFoldCV.ipynb
+++ b/FiveFoldCV.ipynb
@@ -1,38 +1,12 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "FiveFoldCV",
-      "provenance": [],
-      "collapsed_sections": [],
-      "machine_shape": "hm"
-    },
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "ipython",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.7.10"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
         "id": "iYOE5V1Vo7TF"
       },
+      "outputs": [],
       "source": [
         "import os\n",
         "import time\n",
@@ -52,28 +26,21 @@
         "from utils import num_params\n",
         "from train_test import test_model\n",
         "from data import AudioDataset, collate_fn"
-      ],
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "mU5wpkuro7TH",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "a2ed8154-9ba7-45f0-b1be-b3ee20e2e6ea"
+        "id": "mU5wpkuro7TH",
+        "outputId": "74e4742f-36f9-4287-8169-3346bcfd3d46"
       },
-      "source": [
-        "df = pd.read_csv(\"ESC-50/meta/esc50.csv\")\n",
-        "df.head()"
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/html": [
               "<div>\n",
@@ -167,20 +134,54 @@
               "4  1-101296-A-19.wav     1      19    thunderstorm  False    101296    A"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df = pd.read_csv(\"ESC-50/meta/esc50.csv\")\n",
+        "df.head()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "id": "28DgWSb2Ynu0"
+      },
+      "outputs": [],
+      "source": [
+        "def num_params(\n",
+        "    model: object\n",
+        ") -> int:\n",
+        "    return sum([p.numel() for p in model.parameters() if p.requires_grad])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "3wIzSCy5ZrgU",
-        "outputId": "c8636070-95e2-46e0-b5eb-6fe6db140665"
+        "outputId": "e07460e4-bfdf-4e48-b312-ab6ce5e45240"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Device: cuda\n",
+            "Testing complete in 0m 4s\n",
+            "Testing complete in 0m 3s\n",
+            "Testing complete in 0m 4s\n",
+            "Testing complete in 0m 4s\n",
+            "Testing complete in 0m 4s\n"
+          ]
+        }
+      ],
       "source": [
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
         "print(f\"Device: {device}\")\n",
@@ -239,32 +240,32 @@
         "    model, cache = test_model(model, test_loader, optimizer, criterion, device)\n",
         "    _, test_accuracy, *_ = cache.values()\n",
         "    accuracies[f\"fold_{i+1}\"] = test_accuracy"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Device: cuda\n",
-            "Testing complete in 0m 3s\n",
-            "Testing complete in 0m 3s\n",
-            "Testing complete in 0m 3s\n",
-            "Testing complete in 0m 3s\n",
-            "Testing complete in 0m 3s\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "viB16iDqpvsI",
-        "outputId": "4b138023-4c16-4011-966e-09000c03136b"
+        "outputId": "b76af7ba-98ed-4938-c2e3-5f6f6abcb6f9"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Fold 1 accuracy: 80.2%\n",
+            "Fold 2 accuracy: 74.5%\n",
+            "Fold 3 accuracy: 77.8%\n",
+            "Fold 4 accuracy: 82.2%\n",
+            "Fold 5 accuracy: 73.0%\n",
+            "Five fold cross-validation accuracy: 77.5% +- 3.4%\n"
+          ]
+        }
+      ],
       "source": [
         "# Accuracies sometimes vary per run\n",
         "accs = np.array(list(accuracies.values()))\n",
@@ -272,22 +273,35 @@
         "    print(f\"Fold {i+1} accuracy: {acc*100:.1f}%\")\n",
         "print(f\"Five fold cross-validation accuracy: {accs.mean()*100:.1f}% +-\",\n",
         "    f\"{accs.std()*100:.1f}%\")"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Fold 1 accuracy: 77.8%\n",
-            "Fold 2 accuracy: 77.0%\n",
-            "Fold 3 accuracy: 78.5%\n",
-            "Fold 4 accuracy: 80.2%\n",
-            "Fold 5 accuracy: 72.8%\n",
-            "Five fold cross-validation accuracy: 77.2% +- 2.5%\n"
-          ]
-        }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "machine_shape": "hm",
+      "name": "FiveFoldCV",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.7.10"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
